<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">GoDo</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_contexts">Contexts</string>
    <string name="title_activity_task">Task</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_fragment_task_repetitions">Repetitions</string>
    <string name="title_section3">Section 3</string>
    <string name="title_fragment_task_details">Details</string>
    <string name="task_name_hint">Task name</string>
    <string name="task_notes_label">Task notes</string>
    <string name="instance_notes_label">Instance notes</string>
    <string name="pref_filtering_header">Filtering</string>
    <string name="pref_show_blocked_by_task_title">Show dependent tasks</string>
    <string name="pref_show_blocked_by_task_on">Show tasks that are blocked by an incomplete task</string>
    <string name="pref_show_blocked_by_task_off">Hide tasks that are blocked by an incomplete task</string>
    <string name="pref_show_blocked_by_context_title">Show inactive tasks</string>
    <string name="pref_show_blocked_by_context_on">Show tasks that require an inactive context</string>
    <string name="pref_show_blocked_by_context_off">Hide tasks that require an inactive context</string>
    <string name="pref_show_done_title">Show completed tasks</string>
    <string name="pref_show_done_on">Show tasks that are complete</string>
    <string name="pref_show_done_off">Show only incomplete tasks</string>
    <string name="pref_show_future_title">Show future tasks</string>
    <string name="pref_show_future_on">Show tasks with start or plan dates in the future</string>
    <string name="pref_show_future_off">Show only tasks that have begun</string>
    <string name="start_date_label">Start date</string>
    <string name="plan_date_label">Plan date</string>
    <string name="due_date_label">Due date</string>
    <string name="new_task">New task</string>
    <string name="notification_label">Active notification</string>
    <string name="due_notification_label">Due notification</string>
    <string name="tasks_notification_title_template">Tasks: %1$s</string>
    <string name="action_share">Share</string>
    <string name="action_reply">Reply</string>
    <string name="title_activity_tasker_plugin_edit">GoDo Contexts</string>
    <string name="contexts_to_activate">Contexts to activate</string>
    <string name="none">None</string>
    <string name="edit">Edit</string>
    <string name="contexts_to_deactivate">Contexts to deactivate</string>
    <string name="max_notification_level">Maximum notification level</string>
    <string name="delete">Delete</string>
    <string name="context_description">Context description</string>
    <string name="context_name">Context name</string>
    <string name="new_context">New context</string>
    <string name="new_repetition">New repetition rule</string>
    <string name="title_activity_task_repetition_rule">Repetition Rule</string>
    <string name="repetition_to">Set field</string>
    <string name="repetition_from">Starting at</string>
    <string name="repetition_direction">And moving</string>
    <string name="repetition_number">By number</string>
    <string name="sunday">Sunday</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="pref_default_notification_title">Default active notification level</string>
    <string name="pref_default_due_notification_title">Default due notification level</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="new_task_voice">New task from voice</string>
    <string name="pick_from_list">Pick from list</string>
    <string name="new_from_template">New from template</string>
    <string name="new_prereq">Create prerequisite</string>
    <string name="new_nextstep">Create next step</string>
    <string name="mark_complete">Mark complete</string>

</resources>