<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" 
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:columnCount="2">
    
    <RelativeLayout android:layout_columnSpan="2">

    <CheckBox
        android:id="@+id/check"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText 
        android:id="@+id/task_name"
        android:layout_width="fill_parent"
        android:layout_gravity="fill_horizontal"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:layout_height="wrap_content"
        android:inputType="textCapSentences" 
        android:layout_toRightOf="@id/check"
        android:hint="@string/task_name_hint"
        />
    </RelativeLayout>
    
    <TextView android:text="@string/task_notes_label" />
    <EditText
        android:id="@+id/task_notes"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="fill_horizontal"
        android:inputType="textMultiLine|textCapSentences" />
    
    
    <TextView android:text="@string/instance_notes_label" />
    <EditText
        android:id="@+id/instance_notes"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="fill_horizontal"
        android:inputType="textMultiLine|textCapSentences" />
    
    <TextView android:text="@string/notification_label" />
    <Spinner
        android:id="@+id/notification"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="fill_horizontal"
        android:entries="@array/notification_levels" />
    
    <TextView android:text="@string/start_date_label" />
    <EditText android:id="@+id/start_date" 
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="fill_horizontal"
        android:inputType="date"
        />    
        
    <TextView android:text="@string/plan_date_label" />
    <EditText android:id="@+id/plan_date" 
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="fill_horizontal"
        android:inputType="date"
        />    

    <TextView android:text="@string/due_date_label" />
    <EditText android:id="@+id/due_date" 
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="fill_horizontal"
        android:inputType="date"
        />    
        
</GridLayout>