<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".TaskRepetitionRuleActivity" 
    android:columnCount="2"
    >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/repetition_to" />
    <Spinner
        android:id="@+id/to"
        android:layout_height="wrap_content"
        android:layout_width="0dp"
        android:layout_gravity="fill_horizontal"
        android:entries="@array/to_columns"
        />
    
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/repetition_from" />
    <Spinner
        android:id="@+id/from"
        android:layout_height="wrap_content"
        android:layout_width="0dp"
        android:layout_gravity="fill_horizontal"
        android:entries="@array/from_columns"
        />
    
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/repetition_direction" />
    <Spinner
        android:id="@+id/direction"
        android:layout_height="wrap_content"
        android:layout_width="0dp"
        android:layout_gravity="fill_horizontal"
        android:entries="@array/repetition_directions"
        />
    

</GridLayout>